--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 astroid==2.3.3
 attrs==19.3.0
+cycler==0.10.0
+importlib-metadata==1.6.0
 isort==4.3.21
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
+matplotlib==3.2.1
 mccabe==0.6.1
 more-itertools==8.2.0
+numpy==1.18.4
 packaging==20.1
+pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.8.1
+pycodestyle==2.5.0
 pylint==2.4.4
 pyparsing==2.4.6
 pytest==5.3.5
+python-dateutil==2.8.1
 six==1.14.0
+typed-ast==1.4.1
 wcwidth==0.1.8
 wrapt==1.11.2
+zipp==3.1.0
